- authenticated order endpoints